--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+Version 0.1.3
+    + Added ssh_keys support to Droplet object (thanks to Derek: http://github.com/covertgeek)
+
 Version 0.1.2
     + Added ip_address to Droplet object (thanks to Derek: http://github.com/covertgeek)
 
