--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+Version 0.1.5
+    + Updated API
+
 Version 0.1.4
     + Added virtio parameter to create_droplet method
     + Minor fixes in all_ssh_keys method
