updated version to 1.6

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -14,3 +14,4 @@ Contributors
 - Yulli <https://github.com/Yulli>
 - samuelclay <https://github.com/samuelclay>
 - Cleber J Santos <https://github.com/cleberjsantos>
+- samdobson <https://github.com/samdobson>
